--- a/src/App.css
+++ b/src/App.css
@@ -9,23 +9,23 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 40s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #FFB6C1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: 	#F3CFC6;
 }
 
 .App-link {
-  color: #61dafb;
+  color: 	#FF00FF;
 }
 
 @keyframes App-logo-spin {
